--- a/hobby.html
+++ b/hobby.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Hobbies</h1>
+    <a href="index.html">Voltar</a>
 <hr>
 <h3>Academia</h3>
 <img src="./img/academy.jfif" alt="homem treinando na academia" width="225" height="200">
