--- a/HTML/hobby.html
+++ b/HTML/hobby.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="hobby.css">
     <title>Júlio César Hobbies</title>
 </head>
 <body>
-    <h1>Hobbies</h1>
+    <h1 class="Titulo">Hobbies</h1>
 <hr>
 <h3>Academia</h3>
 <img src="./img/academy.jfif" alt="homem treinando na academia" width="225" height="200">
