--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,23 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
     <title>Júlio César Homepage</title>
 </head>
 <body>
-    <h1>Júlio César</h1>
-    <p><em> Desenvolvedor WEB FULLSTACK em desenvolvimento </em> <br>
+    <h1 class="Titulo">Júlio César</h1>
+    <p id="text"><em> Desenvolvedor WEB FULLSTACK em desenvolvimento </em> <br>
     <em>Unidade de formação - <a href="https://al.senai.br/" target="_blank">SENAI/AL</a></em>
     <a href="https://github.com/jjulioCsar" target="_blank">Github</a> | <a href="https://instagram.com/j.csar__" target="_blank">Instagram</a>
     <br> Benedito-Bentes/Al</p>
-    <p><em>Cursando atualmente o curso de informática para desenvolvimento web, em busca da primeira vaga no mundo do trabalho. </em></p>
+    <p id="text"><em>Cursando atualmente o curso de informática para desenvolvimento web, em busca da primeira vaga no mundo do trabalho. </em></p>
     <hr>
-    <h2>Formação Acadêmica:</h2>
+    <h2 class = "Titulo" >Formação Acadêmica:</h2>
     <ul>
         <li>Conhecimento  de Informática - Pacote Office 2007 (Word básico, Excel básico, PowerPoint básico)</li>
         <li>Aplicativos diversos (internet) - Internet Explorer, familiaridade com recursos e pesquisas na WEB</li>
     </ul>
     <hr>
-    <h2>Experiencia Profissional:</h2>
+    <h2 class = "Titulo">Experiencia Profissional:</h2>
     <table border="2">
         <thead>
             <tr>
@@ -42,7 +43,7 @@
 
     <hr>
 
-    <h2>Minhas habilidades:</h2>
+    <h2 class = "Titulo">Minhas habilidades:</h2>
     <table border="2">
         <tbody>
             <tr>
@@ -60,7 +61,7 @@
         </tbody>
     </table>
     <hr>
-    <h3><a href = "./hobby.html" </a>hobby</h3>
-    <h3><a href = "./contato.html" </a>contato</h3>
+    <h3><button class="button"><a href = "./hobby.html" </a class="menu">hobby</button></h3>
+    <h3><button class="button"><a href = "./contato.html" </a class="menu">contato</button></h3>
 </body>
 </html>
