--- a/HTML/contato.html
+++ b/HTML/contato.html
@@ -10,7 +10,7 @@
 <h1>Contato</h1>
 <a href="index.html">Voltar</a>
 <p>
-    <strong>Nome</strong>:Carlos Wilton<br>
+    <strong>Nome</strong>:Júlio César<br>
     <strong>E-mail</strong>:jc.csar7@gmail.com
 </p>
 <hr>
