--- a/HTML/contato.html
+++ b/HTML/contato.html
@@ -7,7 +7,7 @@
     <title>Júlio César contato</title>
 </head>
 <body>
-<h1>Contato</h1>
+<h1 class="Titulo" >Contato</h1>
 <a href="index.html">Voltar</a>
 <p>
     <strong>Nome</strong>:Júlio César<br>
