--- a/HTML/hobby.html
+++ b/HTML/hobby.html
@@ -4,16 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="hobby.css">
+    <link rel="stylesheet" href="./hobby.css">
     <title>Júlio César Hobbies</title>
 </head>
 <body>
     <h1 class="Titulo">Hobbies</h1>
+    <hr>
+    <a href="index.html">Voltar</a>
 <hr>
-<h3>Academia</h3>
+<h3 class="Titulo">Academia</h3>
+<hr>
 <img src="./img/academy.jfif" alt="homem treinando na academia" width="225" height="200">
-<h3>Estudar programação</h3>
-<img src="./img/images.jfif" alt="homem fazendo programação" width="225" height="200">
+<hr>
+<h3 class="Titulo">Estudar programação</h3>
+<hr><img src="./img/images.jfif" alt="homem fazendo programação" width="225" height="200">
 
 </body>
 </html>
