--- a/HTML/project_02/pages/biografia.html
+++ b/HTML/project_02/pages/biografia.html
@@ -4,24 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Darth Vader</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <title>Biografia</title>
+    <link rel="stylesheet" href="../css/style.css"">
 </head>
-<body>
-    <div class="container">   
+<body>   
+   <div class="container">
     <header>
-        <img src="./img/darth-vader_5yvm.1200.webp" alt="darth vader" width="900" height="400">
+        <CEnter><img src="../img/darth-vader_5yvm.1200.webp" alt="darth vader" width="700" height="400"></CEnter>
     </header>     
      <nav class="nav"> 
         <a class="nav-link" href="./index.html">HOME</a>
-        <a class="nav-link" href="./pages/biografia.html">BIOGRAFIA</a>
-        <a class="nav-link" href="./pages/campanhas-publicitarias.html">CAMPANHAS PUBLICITARIAS</a">
-        <a class="nav-link" href="./pages/contato.html">CONTATO</a>
+        <a class="nav-link" href="./campanhas-publicitarias.html">CAMPANHAS PUBLICITARIAS</a">
+        <a class="nav-link" href="./contato.html">CONTATO</a>
+        <a class="nav-link" href="./biografia.html">BIOGRAFIA</a>
     </nav>
 
     <main>
 <article class="article">
-    <h2>Sobre o Darth Vader</h2>
+    <h2>Biografia do Darth Vader</h2>
     <br>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium consectetur commodi ullam sequi saepe ducimus eum iure quae, aperiam est alias cumque quisquam a ut quo, iusto esse sit? Doloremque!</p>
     <br>
@@ -32,9 +32,10 @@
 </article>
 </main>
 <footer class="footer">
-    <h3>Todos os direitos reservados &copy;2023</h3>
+    <center><h3>Todos os direitos reservados &copy;2023</h3></center>
 </footer>
     
-</div>
+
+   </div>
 </body>
 </html>
